@@ -181,7 +181,7 @@ iredapd_config()
 # iRedAPD: Clean up expired tracking records hourly.
 1   *   *   *   *   ${PYTHON_BIN} ${IREDAPD_ROOT_DIR_SYMBOL_LINK}/tools/cleanup_db.py >/dev/null
 
-# iRedAPD: Convert specified SPF DNS record of specified domain names to IP
+# iRedAPD: Convert SPF DNS record of specified domain names to IP
 #          addresses/networks every 30 minutes.
 */30   *   *   *   *   ${PYTHON_BIN} ${IREDAPD_ROOT_DIR_SYMBOL_LINK}/tools/spf_to_greylist_whitelists.py >/dev/null
 EOF
